tests/NormalTests/paczka1/small_fuzzy/83332144.err
Error in line 1: ?S0
Error in line 13: tYTnIXvhX1f S601 115,88
Error in line 14: A429 S0 54,2
